--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URI= 'mongo+srv://Top_Universedb:<123321>@cluster0.xesoxqo.mongodb.net/test'
+DATABASE_URI= mongo+srv://Top_Universedb:123321@cluster0.xesoxqo.mongodb.net/test
