--- a/package.json
+++ b/package.json
@@ -2,12 +2,24 @@
   "name": "QR_identification",
   "packageManager": "yarn@3.2.3",
   "scripts": {
-    "start": "nodemon server"
+    "start": "nodemon server.js",
+    "do": "node qrcode.js",
+    "qr": "node QRCode_terminal.js",
+    "img": "node Save_qr_as_img.js",
+    "QR": "node QRcode.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "csurf": "^1.11.0",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.6.0",
+    "helmet": "^6.0.0",
     "joi": "^17.6.0",
-    "mongoose": "^6.6.0",
-    "nodemon": "^2.0.19"
+    "mongoose": "^6.6.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.19",
+    "qrcode": "^1.5.1"
   }
 }
