--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.6.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
-    "qrcode": "^1.5.1"
+    "qrcode": "^1.5.1",
+    "start": "^5.1.0"
   }
 }
